# qtx

./: Cargo.toml  README.md  plan.txt  pres.odp  pres.pptx  pres_code.odp  qtx.d2
src/: main.rs
ui/: main.ui
